--- a/docs/pages/Apple_M4_SoC/Apple_M4_style.css
+++ b/docs/pages/Apple_M4_SoC/Apple_M4_style.css
@@ -111,3 +111,14 @@ button {
 
 button.prev { left: 10px; }
 button.next { right: 10px; }
+
+.svg-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: red; /* Couleur de l'icône */
+}
+
+.svg-btn:hover {
+  color: blue; /* Changement de couleur au survol */
+}
