--- a/docs/pages/condensateur/style.css
+++ b/docs/pages/condensateur/style.css
@@ -132,3 +132,18 @@ button:hover {
 button:active {
     transform: scale(0.95);
 }
+
+.btn{
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 12px;
+    font-size: 13px;
+    border-radius: 10px;
+    text-decoration: none;
+    border: 1px solid rgba(255,255,255,.08);
+    background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.01));
+    color: var(--text);
+    flex-shrink: 0;
+    white-space: nowrap;
+  }
