--- a/docs/pages/resistance/styleee.css
+++ b/docs/pages/resistance/styleee.css
@@ -2,7 +2,7 @@ body {
 
     font-family: "Comic Sans MS", Arial, sans-serif;
 
-    background: linear-gradient(to right,#ffffff, #65bcce);
+    background: linear-gradient(to right,#ffffff,#9e9c9c );
 
     margin: 0px;
 
@@ -132,6 +132,51 @@ th, td {
 
 }
 
+.cardfrml {
+    margin : auto ;
+
+    flex: 1;                    
+
+    background: white;
+
+    border: 1px solid #ddd;
+
+    border-radius: 8px;
+
+    padding: 15px;
+
+    text-align: center;
+
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+    transition: transform 0.2s;
+    
+    max-width: 800px;
+
+    justify-content: center;
+}
+
+
+.cardee {
+
+    flex: 1;                    
+
+    background: white;
+
+    border: 1px solid #ddd;
+
+    border-radius: 8px;
+
+    padding: 15px;
+
+    text-align: center;
+
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+    transition: transform 0.2s;
+
+}
+
 
 
 .card:hover {
@@ -146,7 +191,7 @@ th, td {
 
     width: 100%;
 
-    height: 150px;              /*fixe la taille*/ 
+    max-height: 150px;              /*fixe la taille*/ 
 
     object-fit: cover;         
 
@@ -182,7 +227,6 @@ th, td {
 
     font-family: "Comic Sans MS", Arial, sans-serif;
 
-    background: linear-gradient(to right, #6dd5ed, #2193b0);
   
     color: white;
   
@@ -199,9 +243,6 @@ th, td {
   }
   
   
+ 
   
-  .back-btn:hover {
   
-    background: linear-gradient(to right, #2193b0, #6dd5ed);
-  
-  }
