--- a/docs/pages/resistance/styleee.css
+++ b/docs/pages/resistance/styleee.css
@@ -8,6 +8,13 @@ body {
 
     height: 100%;
 
+    animation: fadeIn 1.5s ease-in;
+
+}
+
+@keyframes fadeIn {
+    from {opacity:0 ;}
+    to{opacity: 1;}
 }
 
 p{
