--- a/docs/pages/resistance/styleee.css
+++ b/docs/pages/resistance/styleee.css
@@ -2,7 +2,7 @@ body {
 
     font-family: "Comic Sans MS", Arial, sans-serif;
 
-    background: linear-gradient(to right,#ffffff,#9e9c9c );
+    background: linear-gradient(to right,#ffffff,#115ccc );
 
     margin: 0px;
 
