--- a/docs/style.css
+++ b/docs/style.css
@@ -52,9 +52,9 @@
 /* === Encart flottant superposé === */
 .ad-float{
   position: fixed;
-  left: 90px;
+  left: 30px;
   top: 110px;
-  width: 240px;
+  width: 350px;
   background: var(--panel);
   border: 1px solid var(--line);
   border-radius: 16px;
@@ -74,10 +74,10 @@
   animation: adPulse 1.5s infinite;
 }
 
-/* ligne horizontale : Équipe 1 | VS | Équipe 2 */
+/* ligne horizontale : Équipe 1 | VS | Équipe 2 | VS | Equipe 3*/
 .ad-line{
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr auto 1fr auto 1fr;
   align-items: center;
   gap: 8px;
 }
@@ -91,7 +91,7 @@
 }
 
 .ad-vs{
-  width: 80px;
+  width: 70px;
   height: auto;
   display: block;
 }
@@ -130,16 +130,16 @@
 }
 
 /* Image Equipe 3 */
-.ad-link2 {
+.ad-link3 {
   display: block;
 }
 
-.ad-link2 img {
+.ad-link3 img {
   transition: transform 0.2s ease, box-shadow 0.2 ease;
   cursor: pointer;
 }
 
-.ad-link2 img:hover {
+.ad-link3 img:hover {
   transform: scale(1.05);
   box-shadow: 0 0 12px #34ec0f;
 }
