--- a/docs/composantElectronique/transistor/transistor.css
+++ b/docs/composantElectronique/transistor/transistor.css
@@ -179,3 +179,17 @@ body {
   text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
   margin-bottom: 100px;
 } 
+
+.tab{
+  font-size: 2em;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+  margin-bottom: 100px;
+}
+
+.resume{/*resumé*/
+  font-size: 2em;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+  margin-bottom: 100px;
+}
