--- a/docs/composantElectronique/capteur_de_distance/style.css
+++ b/docs/composantElectronique/capteur_de_distance/style.css
@@ -19,10 +19,27 @@ ul {
 }
 
 p {
-    color: white;
+    color: rgb(243, 9, 9);
 }
 
 h2 {
     color: white;
 }
 
+
+  .btn-retour {
+    background-color: #4CAF50;   
+    color: white;                
+    border: none;
+    padding: 12px 24px;
+    border-radius: 25px;         
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    transition: background-color 0.3s, transform 0.2s;
+  }
+
+  .btn-retour:hover {
+    background-color: #45a049;
+    transform: scale(1.05);
+  }
