--- a/docs/composantElectronique/capteur_de_distance/style.css
+++ b/docs/composantElectronique/capteur_de_distance/style.css
@@ -26,6 +26,13 @@ h2 {
     color: white;
 }
 
+h3 {
+    color: white;
+}
+h5 {
+    color: white;
+}
+
 
   .btn-retour {
     background-color: #4CAF50;   
